# hampton

./: .gitignore  README.md  character.py  gamestate.py  pyproject.toml
rules/: agent.md  characters.md  rules.md  stock_price.md  story.md
rules/characters/: admiral.md  ceo.md  mayor.md  rep.md  substacker.md  union.md
rules/scenes/: scene_1.md  scene_2.md  scene_3.md  scene_4.md
src/hampton/: __main__.py  agent.py  api.py  character.py  display.py  gamestate.py  player_decisions.py  simulation.py
src/hampton.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
