[project]
name = "hampton"
version = "0.1.0"
description = "Riskgaming simulation engine"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pydantic",
    "tiktoken",
    "dill"
]

[project.optional-dependencies]
dev = [
    "ipython",
    "pytest",
    "ipdb",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]